fixes cities aligned issue

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -58,6 +58,16 @@
         margin: 0 0 4% 0;
     }
     
+    .section-cities .box { 
+        width: 100%;
+        text-align: center;
+    }
+    
+    .section-cities img {
+    width: 60%;
+    height: 60%;
+}
+    
     .main-nav { display: none; }
     
     h1 { font-size: 180%;}
@@ -89,4 +99,18 @@
 @media only screen and (max-width: 480px) {
     section { padding: 25px 0; }
     .contact-form { width: 100%; }
+    .section-cities .box { width: 100%; }
+      .col { 
+        width: 100%;
+        margin: 0 0 4% 0;
+    }
+        .section-cities .box { 
+        width: 100%;
+        text-align: center;
+    }
+    
+    .section-cities img {
+    width: 60%;
+    height: 60%;
+}
 }
